--- a/app/src/main/res/layout/user_details.xml
+++ b/app/src/main/res/layout/user_details.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardCornerRadius="4dp"
-    android:elevation="4dp">
-
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,8 +30,7 @@
             android:layout_toRightOf="@id/ivProfilePhoto"
             android:fontFamily="sans-serif"
             android:text="@string/first_name"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tvJobTitle"
@@ -49,4 +45,5 @@
             android:text="@string/job_title"
             android:textSize="12sp" />
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
