--- a/app/src/main/res/layout/user_details.xml
+++ b/app/src/main/res/layout/user_details.xml
@@ -1,49 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/ivBackgroundImage"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_image_placeholder" />
+
+    <ImageView
+        android:id="@+id/ivProfilePicture"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_profile_placeholder" />
+
+    <TextView
+        android:id="@+id/tvProfileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_below="@id/ivProfilePicture"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/primary_text"
+        android:text="@string/first_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"/>
 
-        <ImageView
-            android:id="@+id/ivProfilePhoto"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_image_placeholder" />
+    <TextView
+        android:id="@+id/tvProfileJobTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvProfileName"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/secondary_text"
+        android:text="@string/job_title"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="center"/>
 
-        <TextView
-            android:id="@+id/tvFirstName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/ivProfilePhoto"
-            android:layout_marginRight="5dp"
-            android:layout_toRightOf="@id/ivProfilePhoto"
-            android:fontFamily="sans-serif"
-            android:text="@string/first_name"
-            android:textSize="16sp" />
+    <ImageView
+        android:id="@+id/ivProfileEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_email"
+        android:layout_below="@id/tvProfileJobTitle"/>
 
-        <TextView
-            android:id="@+id/tvJobTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/ivProfilePhoto"
-            android:layout_below="@id/tvFirstName"
-            android:layout_marginRight="5dp"
-            android:layout_toRightOf="@id/ivProfilePhoto"
-            android:fontFamily="sans-serif"
-            android:paddingTop="5dp"
-            android:text="@string/job_title"
-            android:textSize="12sp" />
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tvProfileEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ivProfilePhone"
+        android:layout_alignBottom="@id/ivProfileEmail"
+        android:layout_toEndOf="@+id/ivProfileEmail"
+        android:layout_toRightOf="@+id/ivProfileEmail"
+        android:paddingBottom="3dp"
+        android:fontFamily="sans-serif"
+        android:gravity="left"
+        android:text="@string/email"
+        android:textColor="@color/secondary_text"
+        android:textSize="14sp" />
 
-</android.support.v7.widget.CardView>
+    <ImageView
+        android:id="@+id/ivProfilePhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/ic_phone"
+        android:layout_below="@id/ivProfileEmail"/>
+
+    <TextView
+        android:id="@+id/tvProfilePhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ivProfilePhone"
+        android:layout_toEndOf="@+id/ivProfilePhone"
+        android:layout_toRightOf="@+id/ivProfilePhone"
+        android:paddingBottom="3dp"
+        android:fontFamily="sans-serif"
+        android:gravity="left"
+        android:text="@string/phone"
+        android:textColor="@color/secondary_text"
+        android:textSize="14sp" />
+
+</RelativeLayout>
