--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rvUsersList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rvUsersList">
+    android:background="@color/light_grey">
 
 </android.support.v7.widget.RecyclerView>
