--- a/app/src/main/res/layout/user_details.xml
+++ b/app/src/main/res/layout/user_details.xml
@@ -3,33 +3,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/ivBackgroundImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_image_placeholder" />
+
+    <include
+        android:id="@+id/tbUserDetail"
+        layout="@layout/toolbar" />
 
     <ImageView
         android:id="@+id/ivProfilePicture"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="-80dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_profile_placeholder" />
+        android:src="@drawable/ic_profile_placeholder"
+        android:layout_below="@id/ivBackgroundImage"/>
 
     <TextView
         android:id="@+id/tvProfileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ivProfilePicture"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
-        android:textColor="@color/primary_text"
-        android:text="@string/first_name"
+        android:textColor="@color/white"
+        android:text="@string/name"
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"/>
@@ -42,8 +49,7 @@
         android:fontFamily="sans-serif"
         android:textColor="@color/secondary_text"
         android:text="@string/job_title"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="16sp"
         android:gravity="center"/>
 
     <ImageView
